--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -1,1 +1,17 @@
-{{ user }}
+<h1>{{ user }}</h1>
+
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form action="{% url 'edit' user.id %}" method="post">
+    {% csrf_token %}
+    <label for="first_name">First Name</label>
+    <input type="text" name="first_name" id="first_name" value="{{ user.first_name }}" />
+    <br />
+    <label for="last_name">Last Name</label>
+    <input type="text" name="last_name" id="last_name" value="{{ user.last_name }}" />
+    <br />
+    <label for="email">Email</label>
+    <input type="text" name="email" id="email" value="{{ user.email }}" />
+    <br />
+    <input type="submit" value="Save" />
+</form>
