--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -1,7 +1,9 @@
 {% if user_list %}
     <ul>
     {% for user in user_list %}
-        <li><a href="{% url 'detail' user.id %}">{{ user }}</a></li>
+        <li>
+            <a href="{% url 'detail' user.id %}">{{ user }}</a>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
