--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -1,4 +1,4 @@
-<h1>{{ user }}</h1>
+{% if user.id %}<h1>Edit {{ user }}</h1>{% else %}<h1>Add New User</h1>{% endif %}
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
