--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -3,9 +3,11 @@
     {% for user in user_list %}
         <li>
             <a href="{% url 'detail' user.id %}">{{ user }}</a>
+            <a href="{% url 'delete' user.id %}">Delete User</a>
         </li>
     {% endfor %}
     </ul>
 {% else %}
     <p>No users found!</p>
 {% endif %}
+<a href="{% url 'add' %}">Add User</a>
