simple form validation

--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -4,14 +4,16 @@
 
 <form action="{% url 'edit' user.id %}" method="post">
     {% csrf_token %}
+    <fieldset>
     <label for="first_name">First Name</label>
-    <input type="text" name="first_name" id="first_name" value="{{ user.first_name }}" />
+    <input type="text" name="first_name" id="first_name" value="{{ user.first_name }}" required/>
     <br />
     <label for="last_name">Last Name</label>
-    <input type="text" name="last_name" id="last_name" value="{{ user.last_name }}" />
+    <input type="text" name="last_name" id="last_name" value="{{ user.last_name }}" required/>
     <br />
     <label for="email">Email</label>
-    <input type="text" name="email" id="email" value="{{ user.email }}" />
+    <input type="email" name="email" id="email" value="{{ user.email }}" required/>
     <br />
     <input type="submit" value="Save" />
+    </fieldset>
 </form>
