add bootstrap stylings

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -2,12 +2,12 @@
 {% load staticfiles %}
 <html lang="en">
 <head>
-    <title>Test Title</title>
+    <title>User Management</title>
     <link rel="stylesheet" type="text/css" href="{% static 'users/css/bootstrap.min.css' %}"/>
 </head>
 <body>
 <div class="container-fluid">
-    <h1>Users</h1>
+    <h1>User Management</h1>
     {% if sub_template %}
         {% include sub_template %}
     {% else %}
