--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -1,19 +1,39 @@
-{% if user.id %}<h3>Edit {{ user }}</h3>{% else %}<h3>Add New User</h3>{% endif %}
+{% if user.id %}<h3 class="col-sm-offset-2 col-sm-10">Edit {{ user }}</h3>{% else %}<h3>Add New User</h3>{% endif %}
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+{% if error_message %}<h3 class="danger"><strong>{{ error_message }}</strong></p></h3>{% endif %}
 
-<form action="{% url 'edit' user.id %}" method="post">
+<form class="form-horizontal" action="{% url 'edit' user.id %}" method="post">
     {% csrf_token %}
-    <fieldset>
-    <label for="first_name">First Name</label>
-    <input type="text" name="first_name" id="first_name" value="{{ user.first_name }}" required/>
-    <br />
-    <label for="last_name">Last Name</label>
-    <input type="text" name="last_name" id="last_name" value="{{ user.last_name }}" required/>
-    <br />
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" value="{{ user.email }}" required/>
-    <br />
-    <input type="submit" value="Save" />
-    </fieldset>
+    <div class="form-group">
+        <label for="first_name" class="col-sm-2 control-label">First Name</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" name="first_name" id="first_name" value="{{ user.first_name }}" required/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="last_name" class="col-sm-2 control-label">Last Name</label>
+        <div class="col-sm-6">
+            <input type="text" class="form-control" name="last_name" id="last_name" value="{{ user.last_name }}" required/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="email" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-6">
+            <input type="email" class="form-control" name="email" id="email" value="{{ user.email }}" required/>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="bio" class="col-sm-2 control-label">Biography</label>
+        <div class="col-sm-6">
+            <textarea class="form-control" name="bio" id="bio" rows="5">
+                {{ user.bio }}
+            </textarea>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <input type="submit" class="btn btn-default" value="Save" />
+            <a class="btn btn-default" href="/">Cancel</a>
+        </div>
+    </div>
 </form>
