--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -6,13 +6,22 @@
     <link rel="stylesheet" type="text/css" href="{% static 'users/css/bootstrap.min.css' %}"/>
 </head>
 <body>
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <strong class="navbar-brand">User Management</strong>
+        <p class="navbar-text">An example Django project by Jim Grant</p>
+        <a class="btn btn-default navbar-btn navbar-right" href="#">About</a>
+    </div>
+</nav>
 <div class="container-fluid">
-    <h1>User Management</h1>
+    <div class="col-sm-offset-2 col-sm-8">
     {% if sub_template %}
         {% include sub_template %}
     {% else %}
         <p>Cannot display sub_template, none found!</p>
     {% endif %}
+    </div>
 </div>
+<script src="{% static 'users/js/bootstrap.js' %}"></script>
 </body>
 </html>
