--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -10,7 +10,7 @@
     <div class="container">
         <strong class="navbar-brand">User Management</strong>
         <p class="navbar-text">An example Django project by Jim Grant</p>
-        <a class="btn btn-default navbar-btn navbar-right" href="#">About</a>
+        <button class="btn btn-default navbar-btn navbar-right" data-toggle="modal" data-target="#aboutModal">About</button>
     </div>
 </nav>
 <div class="container-fluid">
@@ -22,6 +22,34 @@
     {% endif %}
     </div>
 </div>
-<script src="{% static 'users/js/bootstrap.js' %}"></script>
+
+<!-- Modal -->
+<div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">About</h4>
+      </div>
+      <div class="modal-body">
+        <p>This app was created for the CodeFellows Python Coding Challenge.</p>
+        <p>It uses Django 1.7 to allow management of user information, contained in a NoSQL database.</p>
+          <p>Some additional features beyond what was required for the challenge:</p>
+          <ul>
+              <li><p>Bootstrap was used to give the app a nice coat of paint. I wanted to learn how to use Bootstrap, and this seemed like an ideal project.</p></li>
+              <li><p>A biography field was added to the User model. A shortened version of this bio is automatically delivered by Django for the index page.</p></li>
+              <li><p>A confirmation popup is given when attempting to delete a user.</p></li>
+              </li>
+          </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary center-block" data-dismiss="modal">OK!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{% static 'users/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
