add bio field to User model

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -10,7 +10,7 @@
                 <h2>
                     {{ user }}
                     <br />
-                    <small>This is where the bio summary will go.</small>
+                    <small>{{ user.bio }}</small>
                 </h2>
             </a>
 
