--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -25,9 +25,7 @@
     <div class="form-group">
         <label for="bio" class="col-sm-2 control-label">Biography</label>
         <div class="col-sm-6">
-            <textarea class="form-control" name="bio" id="bio" rows="8">
-                {{ user.bio }}
-            </textarea>
+            <textarea class="form-control" name="bio" id="bio" rows="8">{{ user.bio }}</textarea>
         </div>
     </div>
     <div class="form-group">
