--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -50,5 +50,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static 'users/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'users/js/deleteConfirm.js' %}"></script>
 </body>
 </html>
