--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -5,6 +5,7 @@
 <div>
 {% if user_list %}
     {% for user in user_list %}
+    {% cycle '<div class="row">' '' %}
         <div class="panel panel-default col-sm-6">
             <a href="{% url 'detail' user.id %}">
                 <h2>
@@ -13,13 +14,32 @@
                     <small>{{ user.bio_abbrev }}</small>
                 </h2>
             </a>
-
-            <a class="btn btn-default" href="{% url 'detail' user.id %}">Edit</a>
-            <a class="btn btn-danger" href="{% url 'delete' user.id %}">Delete</a>
+            <div class="pull-right">
+                <a class="btn btn-default" href="{% url 'detail' user.id %}">Edit</a>
+                <!--<a class="btn btn-danger" href="{% url 'delete' user.id %}">Delete</a>-->
+                <a class="btn btn-danger" data-toggle="modal" data-target="#deleteConfirm" data-href="{% url 'delete' user.id %}" data-name="{{user}}">Delete</a>
+            </div>
             <br /><br />
         </div>
+    {% cycle '' '</div>' %}
     {% endfor %}
 {% else %}
     <p>No users found!</p>
 {% endif %}
 </div>
+
+<!-- Modal -->
+<div class="modal" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="aboutModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-body">
+        <p class="delete-warning text-danger text-center"></p>
+      </div>
+      <div class="modal-footer">
+        <a type="button" class="delete-button btn btn-primary pull-right">Delete</a>
+        <button type="button" class="btn btn-primary pull-left" data-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
