--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>User Management</title>
     <link rel="stylesheet" type="text/css" href="{% static 'users/css/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'users/css/user-management.css' %}"/>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
@@ -11,6 +12,7 @@
         <strong class="navbar-brand">User Management</strong>
         <p class="navbar-text">An example Django project by Jim Grant</p>
         <button class="btn btn-default navbar-btn navbar-right" data-toggle="modal" data-target="#aboutModal">About</button>
+        <a href="https://github.com/MigrantJ/cf-exam-django" class="btn btn-default navbar-btn navbar-right">Github</a>
     </div>
 </nav>
 <div class="container-fluid">
