--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -6,20 +6,20 @@
 {% if user_list %}
     {% for user in user_list %}
     {% cycle '<div class="row">' '' %}
-        <div class="panel panel-default col-sm-6">
-            <a href="{% url 'detail' user.id %}">
-                <h2>
-                    {{ user.name_abbrev }}
-                    <br />
-                    <small>{{ user.bio_abbrev }}</small>
-                </h2>
-            </a>
-            <div class="pull-right">
-                <a class="btn btn-default" href="{% url 'detail' user.id %}">Edit</a>
-                <!--<a class="btn btn-danger" href="{% url 'delete' user.id %}">Delete</a>-->
-                <a class="btn btn-danger" data-toggle="modal" data-target="#deleteConfirm" data-href="{% url 'delete' user.id %}" data-name="{{user}}">Delete</a>
+        <div class="col-sm-6">
+            <div class="panel panel-default col-sm-12">
+                <a href="{% url 'detail' user.id %}">
+                    <h2>
+                        {{ user.name_abbrev }}
+                        <br />
+                        <small>{{ user.bio_abbrev }}</small>
+                    </h2>
+                </a>
+                <div class="pull-right">
+                    <a class="btn btn-default" href="{% url 'detail' user.id %}">Edit</a>
+                    <a class="btn btn-danger" data-toggle="modal" data-target="#deleteConfirm" data-href="{% url 'delete' user.id %}" data-name="{{user}}">Delete</a>
+                </div>
             </div>
-            <br /><br />
         </div>
     {% cycle '' '</div>' %}
     {% endfor %}
